max width for containers to streamline

--- a/cognitive.html
+++ b/cognitive.html
@@ -39,27 +39,33 @@
             </div>
         </div>
         <div class="container-fluid main">
-            <p>Math Olympiad, Coding, Chess</p>
+            <div class="centra">
+                <p>Math Olympiad, Coding, Chess</p>
+            </div>
         </div>
-        <nav class="nav navbar container-fluid domain">
+        <nav class="navbar nav container-fluid domain">
             <h5>Math Olympiad</h5>
         </nav>
         <div class="container-fluid main">
-            <h6 style="font-weight:800;">I am ... a MATHEMATICIAN</h6>
-                <p>Challenges in 2020 math olympiad</p>
+            <div class="centra">
+                <h6 style="font-weight:800;">I am ... a MATHEMATICIAN</h6>
+                    <p>Challenges in 2020 math olympiad</p>
+            </div>
         </div>
         <nav class="nav navbar container-fluid domain">
             <h5>Chess</h5>
         </nav>
         <div class="container-fluid main">
-            <h6 style="font-weight:800;">Chess is Math</h6>
-                <p>The chess game is all about math! A game played on an eight-by-eight grid system.</p>
-            <div class="row">
-                <div class="col">
-                    <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess1.jpg" alt="Chess game with dad"></img>
-                </div>
-                <div class="col">
-                    <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess2.jpg" alt="Finding patterns in chess"></img>
+            <div class="centra">
+                <h6 style="font-weight:800;">Chess is Math</h6>
+                    <p>The chess game is all about math! A game played on an eight-by-eight grid system.</p>
+                <div class="row">
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess1.jpg" alt="Chess game with dad"></img>
+                    </div>
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess2.jpg" alt="Finding patterns in chess"></img>
+                    </div>
                 </div>
             </div>
         </div>
@@ -68,18 +74,20 @@
             <a href="#">My Code Projects</a>
         </nav>
         <div class="container-fluid main">
-            <h6 style="font-weight:800;">A CODER, A BUILDER, AN ENGINEER</h6>
-                <p>I can't remmeber when I started building or coding but I remember coding with paper blocks before moving into a series of scratch levels followed by scratch X in the lead up to Phyton Junior. Minecraft Mods forms part of my development in coding and interest in chemistry. I've gained so much from minecraft education that occasionally, I am unable to distinguish between gaming / playing and learning. This is my vulnerability and both my parents and I are in agreement to develop a healthier habit and tactics to manage my difficulty to unplug.
-            <div class="row">
-                <div class="col">
-                    <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code3.jpg" alt="I code games"></img>
-                    <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code1.jpg" alt="Hardware"></img>
-                    <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code2.jpg" alt="Software"></img>
-                </div>
-                <div class="col">
-                    <video class="vids mx-auto d-block" width="300" controls alt="Project Ant">
-                        <source src="videos/mblk.mp4" type="video/mp4">
-                    </video>
+            <div class="centra">
+                <h6 style="font-weight:800;">A CODER, A BUILDER, AN ENGINEER</h6>
+                    <p>I can't remmeber when I started building or coding but I remember coding with paper blocks before moving into a series of scratch levels followed by scratch X in the lead up to Phyton Junior. Minecraft Mods forms part of my development in coding and interest in chemistry. I've gained so much from minecraft education that occasionally, I am unable to distinguish between gaming / playing and learning. This is my vulnerability and both my parents and I are in agreement to develop a healthier habit and tactics to manage my difficulty to unplug.
+                <div class="row">
+                    <div class="col">
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code3.jpg" alt="I code games"></img>
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code1.jpg" alt="Hardware"></img>
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code2.jpg" alt="Software"></img>
+                    </div>
+                    <div class="col">
+                        <video class="vids mx-auto d-block" width="300" controls alt="Project Ant">
+                            <source src="videos/mblk.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
             </div>
         </div>
