--- a/index.html
+++ b/index.html
@@ -52,85 +52,89 @@
                 </blockquote>
             </div>
         </div>
-        <div class="navbar">Accomplishments & Achievements</div>
+        <div class="navbar">
+            <div class="centra">Accomplishments & Achievements</div>
+        </div>
         <div class="container-fluid main">
-            <h6 style="font-weight:800;">Year 2020</h6>
-                <ul>MOE Edusave Certificate of Academic Achievements
-                <br>Primary 5
-                </ul>
-                <ul>Top in English (Primary 5)
-                <br>Singapore Primary School
-                </ul>
-                <ul>Bronze Award Middle Division - Grade 05
-                <br>Singapore International Math Olympiad Challenge (SIMOC)
-                </ul>
-                <ul>Bronze Award 
-                <br>Annual Mathlympics
-                </ul>
-                <ul>Silver Award Grade 05 Division
-                <br>Singapore and Asian Schools Math Olympiad (SASMO)
-                </ul>
-                <ul>SIlver Award Grade 05
-                <br>Singapore Math Kangaroo Contest 
-                </ul>
-                <ul>Credit Middle Division - Year 5
-                <br>Australian Mathematics Competition
-                </ul>
-                <hr>
-            <h6 style="font-weight:800;">Year 2019</h6>
-                <ul>MOE Edusave EAGLES Award
-                <br>Primary 4
-                </ul>
-                <ul>MOE Edusave Certificate of Academic Achievements
-                <br>Primary 4
-                </ul>
-                <ul>Honorable Mention
-                <br>National Mathematical Olympiad of Singapore (NMOS)
-                </ul>
-                <ul>Certificate of Participation
-                <br>Annual Mathlympics
-                </ul>
-                <ul>Certificate of Participation Grade 04 Division
-                <br>Singapore and Asian Schools Math Olympiad (SASMO)
-                </ul>
-                <ul>Bronze Award Grade 04
-                <br>Singapore Math Kangaroo Contest 
-                </ul>
-                <ul>Credit Middle Division - Year 4
-                <br>Australian Mathematics Competition
-                </ul>
-                <ul>Distinction ABRSM Level 1 Award
-                <br>Grade 02 Violin
-                </ul>
-                <ul>Certificate of Completion
-                <br>TSR Backstroke Competency Programme
-                </ul>
-                <hr>
-            <h6 style="font-weight:800;">Year 2018</h6>
-                <ul>CDC-CCC Education Merit Award
-                <br>Primary 3
-                </ul>
-                <ul>MOE Edusave Certificate of Academic Achievements
-                <br>Primary 3
-                </ul>
-                <ul>Certificate of Achievement
-                <br>RippleUX National Coding & Robotic Competition
-                </ul>
-                <ul>Credit Middle Division - Year 3
-                <br>Australian Mathematics Competition
-                </ul>
-                <ul>Model Pupil Award - Primary 3
-                <br>Singapore Primary School
-                </ul>
-                <ul>Certificate of Completion
-                <br>TSR Breaststroke Competency Programme
-                </ul>
-                <ul>Certificate of Paticipation
-                <br>Introduction to Basic Meditation
-                </ul>
-        <button>Back to Top</button>
-        <button>Download PDF</button>
-        <button>Contact Me</button>
+            <div class="centra">
+                <h6 style="font-weight:800;">Year 2020</h6>
+                    <ul>MOE Edusave Certificate of Academic Achievements
+                    <br>Primary 5
+                    </ul>
+                    <ul>Top in English (Primary 5)
+                    <br>Singapore Primary School
+                    </ul>
+                    <ul>Bronze Award Middle Division - Grade 05
+                    <br>Singapore International Math Olympiad Challenge (SIMOC)
+                    </ul>
+                    <ul>Bronze Award 
+                    <br>Annual Mathlympics
+                    </ul>
+                    <ul>Silver Award Grade 05 Division
+                    <br>Singapore and Asian Schools Math Olympiad (SASMO)
+                    </ul>
+                    <ul>SIlver Award Grade 05
+                    <br>Singapore Math Kangaroo Contest 
+                    </ul>
+                    <ul>Credit Middle Division - Year 5
+                    <br>Australian Mathematics Competition
+                    </ul>
+                    <hr>
+                <h6 style="font-weight:800;">Year 2019</h6>
+                    <ul>MOE Edusave EAGLES Award
+                    <br>Primary 4
+                    </ul>
+                    <ul>MOE Edusave Certificate of Academic Achievements
+                    <br>Primary 4
+                    </ul>
+                    <ul>Honorable Mention
+                    <br>National Mathematical Olympiad of Singapore (NMOS)
+                    </ul>
+                    <ul>Certificate of Participation
+                    <br>Annual Mathlympics
+                    </ul>
+                    <ul>Certificate of Participation Grade 04 Division
+                    <br>Singapore and Asian Schools Math Olympiad (SASMO)
+                    </ul>
+                    <ul>Bronze Award Grade 04
+                    <br>Singapore Math Kangaroo Contest 
+                    </ul>
+                    <ul>Credit Middle Division - Year 4
+                    <br>Australian Mathematics Competition
+                    </ul>
+                    <ul>Distinction ABRSM Level 1 Award
+                    <br>Grade 02 Violin
+                    </ul>
+                    <ul>Certificate of Completion
+                    <br>TSR Backstroke Competency Programme
+                    </ul>
+                    <hr>
+                <h6 style="font-weight:800;">Year 2018</h6>
+                    <ul>CDC-CCC Education Merit Award
+                    <br>Primary 3
+                    </ul>
+                    <ul>MOE Edusave Certificate of Academic Achievements
+                    <br>Primary 3
+                    </ul>
+                    <ul>Certificate of Achievement
+                    <br>RippleUX National Coding & Robotic Competition
+                    </ul>
+                    <ul>Credit Middle Division - Year 3
+                    <br>Australian Mathematics Competition
+                    </ul>
+                    <ul>Model Pupil Award - Primary 3
+                    <br>Singapore Primary School
+                    </ul>
+                    <ul>Certificate of Completion
+                    <br>TSR Breaststroke Competency Programme
+                    </ul>
+                    <ul>Certificate of Paticipation
+                    <br>Introduction to Basic Meditation
+                    </ul>
+                <button>Back to Top</button>
+                <button>Download PDF</button>
+                <button>Contact Me</button>
+            </div>
         </div>
     </body>
      <footer class="intro footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
