--- a/aesthetic.html
+++ b/aesthetic.html
@@ -40,20 +40,22 @@
             </div>
         </div>
         <div class="container-fluid main">
-            <p>I was intrigued by the sounds created by my older sister who was learning the violin when I was only five. My parents acquiesce to my request for lesson to make music that was just as beautiful and melodius. Truth be told, mom said she had to suffer through some nail screeching phase in the begining. I persevered alongside my violin teacher and mom; learning to manage exam stress and picked up two distinction award along the way! Johann Sebastian Bach inspires me in my musical journey. He is, in my opinion, the best composer ever lived who crafted two of my favourite musical pieces:</p>
-                <ul>Sinfonia in D major BWV 789</ul>
-                <ul>Prelude in C major BWV 846</ul>
-            <div class="row">
-                <div class="col">
-                    <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/aesthetic/m17.jpg" alt="Christmas Recital"></img>
-                </div>
-                <div class="col">
-                    <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/aesthetic/m19.jpg" alt="Year End Recital"></img>
-                </div>
-                <div class="col">
-                    <video class="mx-auto d-block vids" width="250" controls alt="ABRSM Violin Grade01">
-                        <source src="videos/g1.mp4" type="video/mp4">
-                    </video>
+            <div class="centra">
+                <p>I was intrigued by the sounds created by my older sister who was learning the violin when I was only five. My parents acquiesce to my request for lesson to make music that was just as beautiful and melodius. Truth be told, mom said she had to suffer through some nail screeching phase in the begining. I persevered alongside my violin teacher and mom; learning to manage exam stress and picked up two distinction award along the way! Johann Sebastian Bach inspires me in my musical journey. He is, in my opinion, the best composer ever lived who crafted two of my favourite musical pieces:</p>
+                    <ul>Sinfonia in D major BWV 789</ul>
+                    <ul>Prelude in C major BWV 846</ul>
+                <div class="row">
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/aesthetic/m17.jpg" alt="Christmas Recital"></img>
+                    </div>
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/aesthetic/m19.jpg" alt="Year End Recital"></img>
+                    </div>
+                    <div class="col">
+                        <video class="mx-auto d-block vids" width="250" controls alt="ABRSM Violin Grade01">
+                            <source src="videos/g1.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
             </div>
         </div>
@@ -61,13 +63,15 @@
             <h5>My Journey</h5>
         </nav>
         <div class="container-fluid main justify-content-center">
-            <h6 style="font-weight:800;">Year 2020</h6>
-                <p>I call 2020 the year of adaptability! As much as I was excited to finally match my sister at Grade03, I was devastated that examimations was cancelled. However, the lockdown allowed me to shine as being an IT monitor and leader in school has allowed me to transition easily from physical classes to online classes. I am currently preparing myself for Grade04 examinations and will skip Grade03 as per Teacher Teresa's recommendation. As usual, a Christmas recital is a tradition for me. *link to new xmas video* </p>
-            <h6 style="font-weight:800;">Year 2019</h6>
-                <p>Music became my solace in 2019. It lifted my spirits when I am down and helped me grieve when I lose my toys or arguments with my sister. Mom said my music has moods that ranges from bouncy light and chirpy to long low vibrato as if i am wailing. I spent 2019 preparing for my Grade03 exam but it was postponed from Nov2019 to March2020 due to examiners' logistics.</p>
-            <h6 style="font-weight:800;">Year 2018</h6>
-                <p>My first violin exam the year before in 2017 was truly my biggest learning moment. It was the first time I became aware of the notion of anxiousness and how difficult it was to maintain control of something as simple as breathing! Having Teacher Teresa coaching me with recitals and calming tactics helped me earned my Distinction. I followed on to earn a second Distinction in 2018.
-                </p>
+            <div class="centra">
+                <h6 style="font-weight:800;">Year 2020</h6>
+                    <p>I call 2020 the year of adaptability! As much as I was excited to finally match my sister at Grade03, I was devastated that examimations was cancelled. However, the lockdown allowed me to shine as being an IT monitor and leader in school has allowed me to transition easily from physical classes to online classes. I am currently preparing myself for Grade04 examinations and will skip Grade03 as per Teacher Teresa's recommendation. As usual, a Christmas recital is a tradition for me. *link to new xmas video* </p>
+                <h6 style="font-weight:800;">Year 2019</h6>
+                    <p>Music became my solace in 2019. It lifted my spirits when I am down and helped me grieve when I lose my toys or arguments with my sister. Mom said my music has moods that ranges from bouncy light and chirpy to long low vibrato as if i am wailing. I spent 2019 preparing for my Grade03 exam but it was postponed from Nov2019 to March2020 due to examiners' logistics.</p>
+                <h6 style="font-weight:800;">Year 2018</h6>
+                    <p>My first violin exam the year before in 2017 was truly my biggest learning moment. It was the first time I became aware of the notion of anxiousness and how difficult it was to maintain control of something as simple as breathing! Having Teacher Teresa coaching me with recitals and calming tactics helped me earned my Distinction. I followed on to earn a second Distinction in 2018.
+                    </p>
+            </div>
         </div>
         <div class="container-fluid domain">
             <div class="row">
