--- a/physical.html
+++ b/physical.html
@@ -40,7 +40,7 @@
             </div>
         </div>    
         <div class="container-fluid main">
-            <div class="justify-content-center">
+            <div class="justify-content-center centra">
                 <p>The ancient civilisation of Sparta practices the tradition where all children of Sparta are responsible to serve its government. For that purpose alone, a child of Sparta needs to be strong and a fast learner just to survive. The Spartan government prides strength, power and mental capability to bring their civilisation to new heights.</p>
                 <hr>
                 <h4>THE SPARTAN KIDS CODE</h4>
@@ -52,7 +52,7 @@
                 <ul>A Spartan sets new goals to be the best that they can be</ul>
                 <hr>
             </div>
-            <div class="container-fluid">
+            <div class="container-fluid centra">
                 <div class="row">
                     <div class="col">    
                         <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/ican.jpg" alt="I'll show you that I Can"></img>
@@ -80,16 +80,18 @@
             </div>
         </div>
         <nav class="nav navbar container-fluid domain">
-            <h5>My Journey</h5>
-            <a href="https://www.strava.com/athletes/51155064" target="_blank">Follow me on Strava</a>
+                <h5>My Journey</h5>
+                <a href="https://www.strava.com/athletes/51155064" target="_blank">Follow me on Strava</a>
         </nav>
-        <div class="container-fluid main justify-content-center">
-            <h6 style="font-weight:800;">Year 2020</h6>
-                <p>The COVID19 pandemic has changed how I continue onwards with my journey in fitness and health. I mostly clock 10km of biking or 5km of running around my neighborhood utilizing strava to keep me in check. I have come to appreciate physical fitness as a prerequisite to for the endurance of mental prowess.</p>
-            <h6 style="font-weight:800;">Year 2019</h6>
-                <p>2019 was a year where I ventured into various other sporting activity aside from my training in BJJ and swimming! From team based football and badminton to individual focused sports such as figure skating and rock climbing. Rock climbing came so naturally to me that I was given the nickname spider-boy!   </p>
-            <h6 style="font-weight:800;">Year 2018</h6>
-                <p>I started training in Brazilian Jiu Jitsu (BJJ) as a form of fitness and self defence on top of swimming. I've come to appreaciate that both of these are lifeskills for survival. My most crucial take away from BJJ are the values of compassion, bravery, honesty and humility; values which forms the ethics and moral code of this martial art form.  </p>
+        <div class="container-fluid main">
+            <div class="centra">
+                <h6 style="font-weight:800;">Year 2020</h6>
+                    <p>The COVID19 pandemic has changed how I continue onwards with my journey in fitness and health. I mostly clock 10km of biking or 5km of running around my neighborhood utilizing strava to keep me in check. I have come to appreciate physical fitness as a prerequisite to for the endurance of mental prowess.</p>
+                <h6 style="font-weight:800;">Year 2019</h6>
+                    <p>2019 was a year where I ventured into various other sporting activity aside from my training in BJJ and swimming! From team based football and badminton to individual focused sports such as figure skating and rock climbing. Rock climbing came so naturally to me that I was given the nickname spider-boy!   </p>
+                <h6 style="font-weight:800;">Year 2018</h6>
+                    <p>I started training in Brazilian Jiu Jitsu (BJJ) as a form of fitness and self defence on top of swimming. I've come to appreaciate that both of these are lifeskills for survival. My most crucial take away from BJJ are the values of compassion, bravery, honesty and humility; values which forms the ethics and moral code of this martial art form.  </p>
+            </div>
         </div>
         <div class="container-fluid domain">
             <div class="row">
