fixed header alignment & strava button

--- a/physical.html
+++ b/physical.html
@@ -79,9 +79,15 @@
                 </div>
             </div>
         </div>
-        <nav class="nav navbar container-fluid domain">
+        <nav class="navbar domain">
+            <div class="centra">
                 <h5>My Journey</h5>
-                <a href="https://www.strava.com/athletes/51155064" target="_blank">Follow me on Strava</a>
+            </div>
+            <div class="centra">
+                <a class="btn-light" href="https://www.strava.com/athletes/51155064" target="_blank">
+                    <img class="btn" src="images/icons/logo_strava_0.png"></img>
+                </a>
+            </div>
         </nav>
         <div class="container-fluid main">
             <div class="centra">
