updated buttons & links

--- a/index.html
+++ b/index.html
@@ -131,9 +131,13 @@
                     <ul>Certificate of Paticipation
                     <br>Introduction to Basic Meditation
                     </ul>
-                <button>Back to Top</button>
-                <button>Download PDF</button>
-                <button>Contact Me</button>
+                <button type="button" class="btn btn-sm btn-warning">
+                    <a href="index.html#jklogo">Back to Top</a>
+                </button>
+                <button type="button" class="btn btn-sm btn-warning">
+                    <a href="jkdevpdf.pdf" download="portfolio">Download PDF</a>
+                </button>
+                <button button type="button" class="btn btn-sm btn-warning">Contact Me</button>
             </div>
         </div>
     </body>
