fixed strava button size

--- a/physical.html
+++ b/physical.html
@@ -84,8 +84,8 @@
                 <h5>My Journey</h5>
             </div>
             <div class="centra">
-                <a class="btn-light" href="https://www.strava.com/athletes/51155064" target="_blank">
-                    <img class="btn" src="images/icons/logo_strava_0.png"></img>
+                <a class="btn btn-light" href="https://www.strava.com/athletes/51155064" target="_blank">
+                    <img class="icon" src="images/icons/logo_strava_0.png"></img>
                 </a>
             </div>
         </nav>
