--- a/physical.html
+++ b/physical.html
@@ -85,7 +85,7 @@
             </div>
             <div class="centra">
                 <a class="btn btn-light" href="https://www.strava.com/athletes/51155064" target="_blank">
-                    <img class="icon" src="images/icons/logo_strava_0.png"></img>
+                    <img class="icon" src="images/icons/stravalogo.jpg"></img>
                 </a>
             </div>
         </nav>
