changed g1 video to g3

--- a/aesthetic.html
+++ b/aesthetic.html
@@ -52,20 +52,24 @@
                         <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/aesthetic/m19.jpg" alt="Year End Recital"></img>
                     </div>
                     <div class="col">
-                        <video class="mx-auto d-block vids" width="250" controls alt="ABRSM Violin Grade01">
-                            <source src="videos/g1.mp4" type="video/mp4">
+                        <video class="mx-auto d-block vids" width="250" controls alt="2020: Duet with Teacher Teresa">
+                            <source src="videos/g3.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
             </div>
         </div>
-        <nav class="nav navbar container-fluid domain">
-            <h5>My Journey</h5>
+        <nav class="navbar domain">
+            <div class="centra">
+                <h5>My Journey</h5>
+            </div>
+            <div class="centra"></div>
+            <div class="centra"></div>
         </nav>
         <div class="container-fluid main justify-content-center">
             <div class="centra">
                 <h6 style="font-weight:800;">Year 2020</h6>
-                    <p>I call 2020 the year of adaptability! As much as I was excited to finally match my sister at Grade03, I was devastated that examimations was cancelled. However, the lockdown allowed me to shine as being an IT monitor and leader in school has allowed me to transition easily from physical classes to online classes. I am currently preparing myself for Grade04 examinations and will skip Grade03 as per Teacher Teresa's recommendation. As usual, a Christmas recital is a tradition for me. *link to new xmas video* </p>
+                    <p>I call 2020 the year of adaptability! As much as I was excited to finally match my sister at Grade03, I was devastated that examimations was cancelled. However, the lockdown allowed me to shine as being an IT monitor and leader in school has allowed me to transition easily from physical classes to online classes. I am currently preparing myself for Grade04 examinations and will skip Grade03 as per Teacher Teresa's recommendation.</p>
                 <h6 style="font-weight:800;">Year 2019</h6>
                     <p>Music became my solace in 2019. It lifted my spirits when I am down and helped me grieve when I lose my toys or arguments with my sister. Mom said my music has moods that ranges from bouncy light and chirpy to long low vibrato as if i am wailing. I spent 2019 preparing for my Grade03 exam but it was postponed from Nov2019 to March2020 due to examiners' logistics.</p>
                 <h6 style="font-weight:800;">Year 2018</h6>
