Fixed max width for nav title segments

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                 </blockquote>
             </div>
         </div>
-        <div class="navbar">
+        <nav class="navbar">
             <div class="centra">Accomplishments & Achievements</div>
-        </div>
+            <div class="centra"></div>
+        </nav>
         <div class="container-fluid main">
             <div class="centra">
                 <h6 style="font-weight:800;">Year 2020</h6>
