--- a/cognitive.html
+++ b/cognitive.html
@@ -43,8 +43,12 @@
                 <p>Math Olympiad, Coding, Chess</p>
             </div>
         </div>
-        <nav class="navbar nav container-fluid domain">
-            <h5>Math Olympiad</h5>
+        <nav class="navbar domain">
+            <div class="centra">
+                <h5>Math Olympiad</h5>
+            </div>
+            <div class="centra"></div>
+            <div class="centra"></div>
         </nav>
         <div class="container-fluid main">
             <div class="centra">
@@ -52,8 +56,12 @@
                     <p>Challenges in 2020 math olympiad</p>
             </div>
         </div>
-        <nav class="nav navbar container-fluid domain">
-            <h5>Chess</h5>
+        <nav class="navbar domain">
+            <div class="centra">
+                <h5>Chess</h5>
+            </div>
+            <div class="centra"></div>
+            <div class="centra"></div>
         </nav>
         <div class="container-fluid main">
             <div class="centra">
@@ -69,9 +77,13 @@
                 </div>
             </div>
         </div>
-        <nav class="nav navbar container-fluid domain">
-            <h5 id="coding">Robotics & Coding</h5>
-            <a href="#">My Code Projects</a>
+        <nav class="navbar domain">
+            <div class="centra">
+                <h5 id="coding">Robotics & Coding</h5>
+            </div>
+            <div class="centra">
+                <a href="#">My Code Projects</a>
+            </div>
         </nav>
         <div class="container-fluid main">
             <div class="centra">
