link to google form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Who Am I?</title>
-        <meta name="description" content="">
+        <meta name="description" content="JK's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -138,7 +138,9 @@
                 <button type="button" class="btn btn-sm btn-warning">
                     <a href="jkdevpdf.pdf" download="portfolio">Download PDF</a>
                 </button>
-                <button button type="button" class="btn btn-sm btn-warning">Contact Me</button>
+                <button button type="button" class="btn btn-sm btn-warning">
+                    <a href="googleform.html" target="blank">Contact Me</a>
+                </button>
             </div>
         </div>
     </body>
