--- a/physical.html
+++ b/physical.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>A Spartan Kid</title>
-        <meta name="description" content="">
+        <meta name="description" content="JK's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="css/bootstrap.min.css">
