updated copy, images & scratch link

--- a/cognitive.html
+++ b/cognitive.html
@@ -40,7 +40,18 @@
         </div>
         <div class="container-fluid main">
             <div class="centra">
-                <p>Math Olympiad, Coding, Chess</p>
+                <p>My world revolves around STEM - Science, Technology, Engineering and Mathematics. I am curious about the way things works and I tinker from an early age. In recent years, I've come to realize that Mathematics is everywhere and in everything.</p>
+                <div class="row">
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker1.jpg" alt="I code games"></img>
+                    </div>
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker2.jpg" alt="Hardware"></img>
+                    </div>
+                     <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker3.jpg" alt="Hardware"></img>
+                    </div>
+                </div>
             </div>
         </div>
         <nav class="navbar domain">
@@ -52,37 +63,19 @@
         </nav>
         <div class="container-fluid main">
             <div class="centra">
-                <h6 style="font-weight:800;">I am ... a MATHEMATICIAN</h6>
-                    <p>Challenges in 2020 math olympiad</p>
-            </div>
-        </div>
-        <nav class="navbar domain">
-            <div class="centra">
-                <h5>Chess</h5>
-            </div>
-            <div class="centra"></div>
-            <div class="centra"></div>
-        </nav>
-        <div class="container-fluid main">
-            <div class="centra">
-                <h6 style="font-weight:800;">Chess is Math</h6>
-                    <p>The chess game is all about math! A game played on an eight-by-eight grid system.</p>
-                <div class="row">
-                    <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess1.jpg" alt="Chess game with dad"></img>
-                    </div>
-                    <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess2.jpg" alt="Finding patterns in chess"></img>
-                    </div>
-                </div>
+                <h6 style="font-weight:800;">A MATHEMATICIAN in the making</h6>
+                    <p>I am fascinated by numbers and its rules and orders since young; yet it has never occured to me that Math Olympiad is a path I would venture down. It was in 2018 that I tried it on a whim and it was thrilling to say the least. The move for online competition in 2020 posed multiple challenges but with a silver lining: more international students could now compete as they do not need to travel to Singapore for the competition. SIMOC was my favourite as I met many like minded kids from around the world.</p>
             </div>
         </div>
         <nav class="navbar domain">
             <div class="centra">
                 <h5 id="coding">Robotics & Coding</h5>
             </div>
+            <div class="centra"></div>
             <div class="centra">
-                <a href="#">My Code Projects</a>
+                <a class="btn btn-light" href="https://scratch.mit.edu/users/tech6jamie/" target="_blank">
+                    <img class="icon" src="images/icons/scratchlogo.jpg">Projects</img>
+                </a>
             </div>
         </nav>
         <div class="container-fluid main">
@@ -99,6 +92,30 @@
                         <video class="vids mx-auto d-block" width="300" controls alt="Project Ant">
                             <source src="videos/mblk.mp4" type="video/mp4">
                         </video>
+                    </div>
+                </div>
+            </div>
+        </div>
+         <nav class="navbar domain">
+            <div class="centra">
+                <h5>Chess</h5>
+            </div>
+            <div class="centra"></div>
+            <div class="centra"></div>
+        </nav>
+        <div class="container-fluid main">
+            <div class="centra">
+                <h6 style="font-weight:800;">A GAMER and budding CHESSMASTER</h6>
+                    <p>My family believes in spending time playing games together. One of my favourite board game is Chess! It is a game steeped in mathematics! From geometric concepts and coordinates systems to solving mathematical problems. This is because the game is played on an eight-by-eight grid system; a total of 64squares. I am intrigued by the knights tour as well as game theory - a branch of mathematics!</p>
+                <div class="row">
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess1.jpg" alt="Chess game with dad"></img>
+                    </div>
+                    <div class="col">
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess3.jpg" alt="Chess game with dad"></img>
+                    </div>
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess2.jpg" alt="Finding patterns in chess"></img>
                     </div>
                 </div>
             </div>
